Version 0.2  - Rewrote compile to get more behavior to the smalltalk side.